@@ -1,3 +1,8 @@
+2002-06-10  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* Makefile.am (maintainer-check): Fix $MAKE -e detection.
+	* tests/yacc7.test: Use rm -f.
+
 2002-06-09  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	For PR automake/318:
